@@ -1,3 +1,9 @@
+2001-09-15  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* objs/egg.cc (Egg_object): Fixed eggs once again.
+	* combat.cc: Don't set duelists into combat mode when struck.
+	* intrinsics.cc: Separated out 'create_new_object2()'.
+
 2001-09-15  Dancer Vesperman  <dancer@users.sourceforge.net>
 
 	* acconfig.h, configure.in: Check for gtk support seperately to exult studio.
